# vibemath

./: .cursorignore  .cursorrules  .gitignore  .pre-commit-config.yaml  LICENSE  PROMPTS.md  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
src/mathviber/: __init__.py  _version.py  app.py  cli.py
src/mathviber/templates/: index.html
src/tests/: __init__.py  test_advanced_plotting.py  test_app_form.py  test_app_home.py  test_cli.py  test_math_functionality.py  test_structure.py  test_version.py
